Sun Feb 22 01:52:30 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (bsock_recvmsg_internal): don't call
	  discard_cmsg_resource when EMFILE.

Sun Feb 22 01:48:51 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (bsock_recvmsg_internal): gc when SCM_RIGHTS
	  hit the file descriptor limit.

Sun Feb 22 00:51:58 2009  Tanaka Akira  <akr@fsij.org>

	* io.c (io_getpartial): error message describes what should be
	  waited after nonblocking error.
	  (rb_io_write_nonblock): ditto.

	* ext/socket/init.c (s_recvfrom_nonblock): ditto.
	  (s_accept_nonblock): ditto.

	* ext/socket/socket.c (sock_connect_nonblock): ditto.

	* ext/socket/ancdata.c (bsock_sendmsg_internal): ditto.
	  (bsock_recvmsg_internal): ditto.

Sun Feb 22 00:31:42 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (bsock_recvmsg_internal): check recvmsg error
	  earlier.

Fri Feb 20 23:28:11 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* util.c (rv_alloc, freedtoa): use our normal xmalloc()/xfree() because
	  couldn't free the returned pointer from ruby_dtoa().

	* missing/vsnprintf.c (cvt): receive buffer and use/return it instead
	  of returning the pointer returned from BSD__dtoa().

	* missing/vsnprintf.c (BSD_vfprintf): pass buf to cvt() as the buffer.
	  [ruby-core:22184]

Thu Feb 19 22:59:09 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (make_io_for_unix_rights): cmsg_len may be
	  bigger than msg_controllen on 4.4BSD at least.
	  freeze unix_rights array.

Thu Feb 19 22:17:38 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (bsock_recvmsg_internal): fix exception.

Thu Feb 19 21:13:03 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (ancillary_unix_rights): method renamed.

Thu Feb 19 15:47:11 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* template/fake.rb.in: extracted from Makefile.in.

	* configure.in (fake.rb): prefixed with $(arch)-.

Thu Feb 19 15:39:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
