@@ -1,3 +1,8 @@
+Sun Feb 22 02:03:46 2009  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/ancdata.c (bsock_recvmsg_internal): check max length
+	  overflow.
+
 Sun Feb 22 01:52:30 2009  Tanaka Akira  <akr@fsij.org>
 
 	* ext/socket/ancdata.c (bsock_recvmsg_internal): don't call
